# TACL-Python

./: .gitignore  MANIFEST.in  README.md  SETUP_SUMMARY.md  pyproject.toml
examples/: faq.tacl  faq_fixed.tacl  test_simple.tacl
src/tacl/: __init__.py  api.py  cli.py  parser.py  utils.py
src/tacl/exporters/: __init__.py  json.py  toml.py  yaml.py
test_data/: example_bare_references.tacl  example_bare_references_correct.tacl  example_combined.tacl  example_literals.tacl
tests/: test_custom_type.py  test_faq.py  test_faq_compile.py  test_imports.py  test_log_config.py  test_new_features.py  test_simple.py  test_type_check.py  test_yaml_lists.py
